# arete

./: .env  .gitignore  .gitmodules  .yarnrc.yml  3rd.sh  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build.sh  check.sh  musl.sh  package-lock.json  package.json  react.sh  schema.sh  upgrade.sh
.cargo/: config
ant-design-pro/: package-lock.json  package.json
ant-design-pro/src/: App.tsx
ant-design-pro/src/layouts/: Footer.tsx
ant-design-pro/src/locales/: index.ts
ant-design-pro/src/reducers/: site-info.ts
ant-design-pro/src/utils/: config.ts  request.ts
dashboard/: .env  .eslintrc.js  .gitignore  .umirc.ts  3rd.sh  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js
dashboard/public/: index.html  manifest.json
dashboard/src/: App.css  App.tsx  App.vue  Router.tsx  actions.ts  app.ts  constants.js  form.ts  global.css  icons.ts  index.tsx  intl.ts  main.css  main.js  request.js  request.ts  store.js  store.ts  token.js  token.ts
dashboard/src/components/: Col.tsx  Content.tsx  Delete.tsx  FileList.vue  Form.tsx  Head.tsx  JsonText.vue  MessageBar.tsx  NonSignIn.tsx  Notification.vue  Row.tsx  Table.tsx  Timestamp.vue  authorized.tsx  form.tsx  index.js  index.ts  index.tsx
dashboard/src/i18n/: en-US.js  en-US.ts  index.js  index.ts  zh-Hans.ts  zh-Hant.js
dashboard/src/intl/: en-US.ts  index.ts  zh-Hans.ts
dashboard/src/layout/: Copyright.tsx  Footer.tsx  Header.tsx  index.tsx
dashboard/src/layouts/: Application.tsx  Footer.tsx  Title.tsx  index.js  index.tsx
dashboard/src/locales/: en-US.ts  index.ts  zh-CN.ts  zh-Hans.ts  zh-Hant.ts
dashboard/src/pages/: Home.tsx  Install.tsx  NoMatch.tsx  index.ts  install.tsx
dashboard/src/plugins/: NotFound.vue  index.js  index.ts
dashboard/src/reducers/: current-user.ts  currentUser.ts  index.ts  message-bar.ts  side-bar.ts  site-info.ts  siteInfo.ts
dashboard/src/utils/: index.ts  languages.ts  moment.ts  request.ts  token.ts
db/migrations/20190101053014-create-locales/: up.sql
db/migrations/20190101053042-create-settings/: up.sql
db/migrations/20190101053052-create-auth/: up.sql
db/migrations/20190101053059-create-site/: down.sql  up.sql
db/migrations/20190101053108-create-forum/: down.sql  up.sql
db/migrations/20190101053114-create-survey/: down.sql  up.sql
db/migrations/20190101053657-create-vip-members/: up.sql
deploy/: .gitignore  MAIL.md  NGINX.md  build.yml  email.yml  idc.yml  mail.yml  php.yml  run  snmp.yml  vpn.yml  web.yml
deploy/agents/: staging  staging.pub
deploy/production/: hosts
deploy/production/group_vars/: all.yml  www.yml
deploy/staging/: hosts
deploy/staging/group_vars/: all.yml  mail.yml  php.yml  web.yml
doc/: ANDROID.md  ATOM.md  DOCKER.md  GITHUB.md  NODEJS.md  RUBY.md  RUST.md
docker/: Dockerfile  README.md  supervisord.conf
docker/alpine/: Dockerfile  README.md
docker/mail/: Dockerfile  README.md  nginx.conf  supervisord.conf
docker/ubuntu/: Dockerfile  README.md  supervisord.conf
fluent-ui/src/: App.tsx  actions.ts
fluent-ui/src/components/: Authorized.tsx  ScrollToTop.tsx
fluent-ui/src/locales/: index.ts
fluent-ui/src/utils/: config.ts  moment.ts
locales/: en-US.yml  zh-Hant.yml
notes/: ANDROID.md  DOCKER.md  EMAIL.md  GIT.md  GITHUB.md  JAVA.md  MYSQL.md  NTP.md  ORACLE.md  PLONE.md  POSTGRESQL.md  PYTHON.md  RABBITMQ.md  RUBY.md  RUST.md  UBUNTU.md  VPN.md
notes/.emacs.d/: init.el
portal/: .gitignore  README.md  config.toml
portal/themes/bootstrap/: theme.toml
portal/themes/bulma/: theme.toml
scripts/: postinst
src/: album.cc  album.h  babel.cc  babel.h  banner.txt  cbeta.cc  cbeta.h  common.h  config.h.in  courses.cc  courses.h  env.rs  errors.rs  forum.cc  forum.h  http.rs  jwt.rs  lib.rs  macros.rs  mail.cc  mail.h  main.cc  main.rs  monitor.h  nav.rs  nut.cc  nut.h  parser.rs  redis.rs  request.rs  settings.rs  survey.cc  survey.h  theme.rs  utils.cc  utils.h  vpn.cc  vpn.h
src/app/: http.rs  mod.rs
src/app/database/: migrate.rs  (+3 more)
src/cache/: mod.rs  redis.rs
src/crypto/: mod.rs  sodium.rs  ssha512.rs
src/dict/: BGLEntryFormat.md  BGLFormat.md  README.md  mod.rs  stardict.rs
src/graphql/: actix.rs  context.rs  mod.rs  mutation.rs  query.rs  session.rs
src/hugo/: bulma.rs  mod.rs
src/i18n/: graphql.rs  locale.rs  mod.rs
src/oauth/: line.rs  mod.rs
src/orm/: migration.rs  mod.rs  schema.rs
src/plugins/: mod.rs
src/queue/: mod.rs  mosquitto.rs  rabbitmq.rs  zeromq.rs
src/settings/: mod.rs  schema.rs
src/storage/: fs.rs  mod.rs  s3.rs
src/sys/: dhcp.rs  git.rs  image_magick.rs  interfaces.rs  mod.rs  network.rs  nmap.rs  timezone.rs  ubuntu.rs  watchdog.rs  zeromq.rs
src/themes/: mod.rs
templates/: EMAIL.md  network.sh  nginx.conf  systemd.conf
templates/bootstrap/: index.html
templates/bulma/: index.html
templates/materialize/: index.html
templates/openvpn/: auth.sh  auth.txt  ccd  client.conf  dnsmasq.conf  firewall.sh  iptables.sh  readme.md  server.conf
templates/postfix/: virtual-alias-maps.cf  virtual-mailbox-maps.cf
templates/semantic/: index.html
templates/systemd/: dhcp.network  static.network  wpa.conf  wpa.service  wpa_supplicant.conf
templates/ubuntu/: interfaces  network.sh  wpa_supplicant.conf
tests/: cbeta_test.rs  dhclient.eth0.leases  dhcp_test.rs  dict_test.rs  elasticmq_test.rs  minio_test.rs  mqtt_pub_test.rs  mqtt_sub_test.rs  mustache_test.rs  network_dhcp_test.rs  network_setup_test.rs  network_test.rs  nmap.xml  nmap_test.rs  ntp_test.rs  oauth_aws_test.rs  oauth_google_test.rs  oauth_test.rs  rabbitmq_consumer_test.rs  rabbitmq_publisher_test.rs  ubuntu_test.rs  wlp3s0-home.lease
tests/systemd/: dhcp.leases
tools/: .gitignore  3rd.sh  README.md  assets.sh  build.sh  dashboard.sh  main.py  musl.sh  nmap.py  snmp.py  snmp.toml
tools/aid/: README.md  main.py
tools/arete/: __init__.py  youku.py  youtube.py
tools/mpeg/: .gitignore  README.md  gmpg.py  gui.py  i18n.sh  mpeg.py
umi/: .gitignore  .umirc.ts
umi/src/: Loading.tsx  access.ts
x64/: Dockerfile  README.md
(+511 files in other folders)
