[package]
name = "arete"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A web application by Rust and React."
homepage = "https://github.com/saturn-xiv/arete"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true

[features]
default = ["postgresql"]
postgresql = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]

[dependencies]
log = "0.4"
log4rs = "0.11"
env_logger = "0.7"
failure = "0.1"
base64 = "0.12"
rand = "0.7"
toml = "0.5"
yaml-rust = "0.4"
validator = "0.10"
validator_derive = "0.10"
serde-xml-rs = "0.4"
xml-rs = "0.8"
encoding_rs = "0.8"
nix = "0.17"
eui48 = "0.4"
hex = "0.4"
md5 = "0.7"
git2 = "0.13"
ssh2 = "0.8"
mime = "0.3"
robots_txt = "0.6"
sitemap = "0.4"
lettre = "0.9"
lettre_email = "0.9"
r2d2 = "0.8"
r2d2_redis = "0.13"
rusoto_core = "0.43"
rusoto_credential = "0.43"
rusoto_sqs = "0.43"
rusoto_s3 = "0.43"
sodiumoxide = "0.2"
askama = "0.9"
juniper = "0.14"
actix-multipart = "0.2"
actix-files = "0.2"
actix-session = "0.3"
actix-cors = "0.2"
futures = "0.3"
bytesize = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1"
csv = "1"
actix-rt = "1"
actix-utils = "1"
actix-service = "1"
humantime="2"
url = "2"
clap = "2"
percent-encoding = "2"
mime_guess = "2"
actix-web = "2"
amq-protocol-uri = "5"
tempfile = "3"
jsonwebtoken = "7"

[dependencies.lapin]
version = "0.33"
features = ["futures"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.rss]
version = "1"
features = ["from_url"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.zmq]
version = "0.9"
# features = ["vendored"]

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

[dependencies.diesel]
version = "1"
features = ["chrono", "serde_json", "uuid", "numeric", "r2d2", "128-column-tables"]

# https://github.com/eclipse/paho.mqtt.rust/issues/29
[dependencies.paho-mqtt]
git = "https://github.com/eclipse/paho.mqtt.rust.git" 

[dependencies.mustache]
git = "https://github.com/nickel-org/rust-mustache.git"
