[package]
name = "arete"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A web application by Rust and React."
homepage = "https://github.com/saturn-xiv/arete"
license = "MIT"
readme = "README.md"

[features]
default = ["postgresql"]
postgresql = []
mysql = []
sqlite = []

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
actix-cors = "0.2"
actix-files = "0.2"
actix-multipart = "0.2"
sodiumoxide = "0.2"
actix-session = "0.3"
futures = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
mime = "0.3"
hex = "0.4"
log = "0.4"
sitemap = "0.4"
yaml-rust = "0.4"
serde-xml-rs = "0.4"
toml = "0.5"
env_logger = "0.7"
md5 = "0.7"
rand = "0.7"
robots_txt = "0.7"
encoding_rs = "0.8"
r2d2 = "0.8"
ssh2 = "0.8"
xml-rs = "0.8"
askama = "0.9"
lettre = "0.9"
lettre_email = "0.9"
validator = "0.10"
validator_derive = "0.10"
base64 = "0.12"
git2 = "0.13"
r2d2_redis = "0.13"
juniper = "0.14"
nix = "0.17"
rusoto_core = "0.43"
rusoto_credential = "0.43"
rusoto_sqs = "0.43"
rusoto_s3 = "0.43"
bytesize = "1"
eui48 = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1"
csv = "1"
actix-rt = "1"
actix-utils = "1"
actix-service = "1"
lapin = "1"
actix-web = "2"
humantime="2"
url = "2"
clap = "2"
percent-encoding = "2"
mime_guess = "2"
tempfile = "3"
amq-protocol-uri = "6.0.0-rc11"
jsonwebtoken = "7"


[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.zmq]
version = "0.9"
# features = ["vendored"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.rss]
version = "1"
features = ["from_url"]

[dependencies.diesel]
version = "1"
features = ["chrono", "serde_json", "uuid", "numeric", "r2d2", "postgres", "mysql", "sqlite"]

[dependencies.handlebars]
version = "3"
features = ["dir_source"]

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

# https://github.com/eclipse/paho.mqtt.rust/issues/29
[dependencies.paho-mqtt]
git = "https://github.com/eclipse/paho.mqtt.rust.git" 

[dependencies.mustache]
git = "https://github.com/nickel-org/rust-mustache.git"